<resources>
    <string name="app_name">Rocket Maths</string>
    <string name="button_home">HOME</string>
    <string name="button_start_game">Start Game</string>
    <string name="button_new_game">NEW GAME</string>
    <string name="button_highscores">HIGHSCORES</string>
    <string name="button_how_to_play">HOW TO PLAY</string>
    <string name="button_settings">SETTINGS</string>
    <string name="button_create">Create</string>
    <string name="button_new_player">New Player</string>
    <string name="button_clear_results">Clear results</string>
    <string name="button_clear_players">Clear players</string>
    <string name="title_settings">Settings</string>
    <string name="title_who_are_you">Who are you?</string>
    <string name="title_year">2021</string>
    <string name="title_game">Rocket Maths</string>
    <string name="status_paused">PAUSED</string>
    <string name="highscore_share_tip">Tap on a highscore to share!</string>
    <string name="hint_enter_a_nickname">Enter a nickname</string>
    <string name="status_creating">CREATING...</string>
    <string name="hint_please_enter_a_username">Please enter a valid username!</string>
    <string name="title_are_you_ready">Are you ready?</string>
    <string name="dialog_positive">OK</string>
    <string name="dialog_negative">Cancel</string>
    <string name="dialog_clear_players_description">This action will remove all players and their results. This action cannot be undone, are you sure you wish to continue?</string>
    <string name="dialog_clear_players_title">Clear players</string>
    <string name="dialog_clear_results_title">Clear results</string>
    <string name="dialog_clear_results_description">This action will remove all results. This action cannot be undone, are you sure you wish to continue?</string>
    <string name="button_difficulty_format">Difficulty: </string>
    <string name="button_music_enabled">Music: Enabled</string>
    <string name="button_music_disabled">Music: Disabled</string>
    <string name="title_highscores_format">Highscores [%s]</string>
    <string name="game_round_format">Round: %d</string>
    <string name="dialog_share_description">Would you like to share your highscore on our twitter page?</string>
    <string name="dialog_share_title">Share highscore</string>
    <string name="twitter_share_format">%s scored a total of %s points on %s mode! Out of %d answers submitted, %s were correct and %s were incorrect.</string>
    <string name="highscore_total_points">Total points: %s</string>
    <string name="highscore_amnt_correct">Correct answers: %s</string>
    <string name="highscore_amnt_incorrect">Incorrect answers: %s</string>
    <string name="title_how_to_play">How to play</string>
    <string name="button_previous"><![CDATA[< PREV]]></string>
    <string name="button_next"><![CDATA[NEXT >]]></string>
    <string name="cpu">CPU</string>
    <string name="description_landing_image">landing image</string>
    <string name="description_tutorial_image">tutorial image</string>
    <string name="menu_title_home">Home</string>
    <string name="menu_title_pause">Pause Game</string>
</resources>