<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/BaseLinearLayout"
    tools:context=".TutorialActivity">

    <TextView
        style="@style/Title"
        android:id="@+id/tutorialTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tutorialDescriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"/>

    <ImageView
        android:id="@+id/tutorialImageView"
        android:layout_width="200dp"
        android:layout_height="340dp"
        android:background="@color/white"
        android:padding="2dp"
        android:layout_marginVertical="25dp"
        android:contentDescription="@string/description_tutorial_image" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            style="@style/MenuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_previous"
            android:onClick="previousButtonClicked"/>

        <Button
            style="@style/MenuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_next"
            android:onClick="nextButtonClicked"/>

    </LinearLayout>

    <Button
        style="@style/MenuButton"
        android:text="@string/button_home"
        android:onClick="homeButtonClicked"
        tools:ignore="OnClick" />

</LinearLayout>