<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BaseLinearLayout"
    tools:context=".NewPlayerActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            style="@style/MenuButton"
            android:id="@+id/userNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_enter_a_nickname"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <Button
            style="@style/MenuButton"
            android:id="@+id/userNameSubmitButton"
            android:onClick="createButtonClicked"
            android:text="@string/button_create"/>

        <Button
            style="@style/MenuButton"
            android:text="@string/button_home"

            android:onClick="homeButtonClicked"
            tools:ignore="OnClick" />

    </LinearLayout>

</LinearLayout>