<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <com.owenherbert.cp3406.rocketmaths.game.ParallaxView
        android:id="@+id/gameBarsGameView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
    />

    <LinearLayout
        android:id="@+id/gameInfoLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:id="@+id/roundNumberTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/roundEquationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="@color/white"/>
    </LinearLayout>

    <TableRow
        android:id="@+id/possibleAnswersTableRow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:visibility="invisible">

        <Button
            android:id="@+id/answerButton1"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="answerButtonClicked"
            style="@style/GameButton"/>

        <Button
            android:id="@+id/answerButton2"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="answerButtonClicked"
            style="@style/GameButton"/>

        <Button
            android:id="@+id/answerButton3"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="answerButtonClicked"
            style="@style/GameButton"/>

        <Button
            android:id="@+id/answerButton4"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="answerButtonClicked"
            style="@style/GameButton"/>

        <Button
            android:id="@+id/answerButton5"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="answerButtonClicked"
            style="@style/GameButton"/>

    </TableRow>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            style="@style/Title"
            android:id="@+id/readyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_are_you_ready"/>

        <Button
            android:id="@+id/playButton"
            android:onClick="playButtonClicked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_start_game"/>

    </LinearLayout>

    <TextView
        style="@style/Title"
        android:id="@+id/pausedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_paused"
        android:layout_gravity="center"
        android:visibility="invisible"/>

</FrameLayout>